--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Нажми"
+        android:text="Нажми меня"
         android:id="@+id/button_najmi"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/abc_background_cache_hint_selector_material_light" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
