--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:onClick="@string/app_name">
+    android:onClick="@string/app_name"
+    android:id="@+id/a1"
+    android:clickable="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,14 +14,35 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="ХУЙ"
         android:id="@+id/textView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        style="@style/Base.TextAppearance.AppCompat.Display4" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Нажми меня"
-        android:id="@+id/button_najmi"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="1"
+        android:id="@+id/button_1"
+        android:layout_marginLeft="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="140dp"
+        android:clickable="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:id="@+id/button_2"
+        android:layout_alignTop="@+id/button_1"
+        android:layout_toEndOf="@+id/button_1"
+        android:clickable="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:id="@+id/button_3"
+        android:layout_alignTop="@+id/button_2"
+        android:layout_toEndOf="@+id/button_2"
+        android:clickable="true" />
 
 </RelativeLayout>
